fix: fonts and section spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,7 +30,7 @@
 
 body {
   /* cursor: none; */
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-main);
 }
 
 .scrollbar-hide {
